--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello world
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Login Page</h1>
+
+<form action="index.html">
+  <label for="loginName">Username:</label>
+  <input type="text" id="loginName" name="loginName"><br><br>
+  <label for="password">Password:</label>
+  <input type="password" id="loginPwd" name="loginPwd"><br><br>
+  <input type="submit" value="Submit">
+  <input type="reset">
+</form>
+
+</body>
+</html>
