--- a/budget.html
+++ b/budget.html
@@ -1,1 +1,13 @@
-hello
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Login Page</h1>
+
+<label for="totalIncome">Income:</label>
+<input type="text" id="totalIncome" name="totalIncome"><br><br>
+<label for="ratio">SaveRatio:</label>
+<input type="ratio" id="ratio" name="ratio"><br><br>
+
+</body>
+</html>
