--- a/budget.html
+++ b/budget.html
@@ -2,12 +2,13 @@
 <html>
 <body>
 
-<h1>Login Page</h1>
-
-<label for="totalIncome">Income:</label>
-<input type="text" id="totalIncome" name="totalIncome"><br><br>
-<label for="ratio">SaveRatio:</label>
-<input type="ratio" id="ratio" name="ratio"><br><br>
-
+<h1>Budget Page</h1>
+<form>
+  <label for="totalIncome">Income:</label>
+  <input type="text" id="totalIncome" name="totalIncome"><br><br>
+  <label for="ratio">SaveRatio:</label>
+  <input type="ratio" id="ratio" name="ratio"><br><br>
+</form> 
+  
 </body>
 </html>
