--- a/budget.html
+++ b/budget.html
@@ -6,8 +6,9 @@
 <form>
   <label for="totalIncome">Income:</label>
   <input type="text" id="totalIncome" name="totalIncome"><br><br>
-  <label for="ratio">SaveRatio:</label>
+  <label for="ratio">Save % of Income:</label>
   <input type="ratio" id="ratio" name="ratio"><br><br>
+  <p> Total Buget: </p>
 </form> 
   
 </body>
