--- a/budget.html
+++ b/budget.html
@@ -9,7 +9,9 @@
   <label for="ratio">Save % of Income:</label>
   <input type="ratio" id="ratio" name="ratio"><br><br>
   <p> Total Buget: </p>
+  <input type="button" onclick="function1()" value="Update">
 </form> 
+  
   
 </body>
 </html>
