--- a/budget.html
+++ b/budget.html
@@ -3,13 +3,13 @@
 <body>
 
 <h1>Budget Page</h1>
-<form>
+<form action = "confirm.html">
   <label for="totalIncome">Income:</label>
   <input type="text" id="totalIncome" name="totalIncome"><br><br>
   <label for="ratio">Save % of Income:</label>
   <input type="ratio" id="ratio" name="ratio"><br><br>
   <p> Total Buget: </p>
-  <input type="button" onclick="function1()" value="Update">
+  <input type="submit" onclick="function1()" value="Update">
 </form> 
   
   
