--- a/confirm.html
+++ b/confirm.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <label> id = "l1" </label>
-  <label> id = "l2" </label>
+  <label id = "l1"> </label>
+  <label id = "l2"> </label>
 </body>
 </html>
