--- a/confirm.html
+++ b/confirm.html
@@ -2,5 +2,6 @@
 <body>
   <label id = "l1"> </label>
   <label id = "l2"> </label>
+  <input type = "button" onclick = "update()"></input>
 </body>
 </html>
