--- a/budget.html
+++ b/budget.html
@@ -11,7 +11,9 @@
   <p> Total Buget: </p>
   <input type="submit" onclick="function1()" value="Update">
 </form> 
-  
+  <script> 
+  let function1 = () => {localStorage.setItem("name", "tom"); localStorage.setItem("money", 30);}
+  </script>
   
 </body>
 </html>
