--- a/confirm.html
+++ b/confirm.html
@@ -4,4 +4,7 @@
   <label id = "l2"> </label>
   <input type = "button" onclick = "update()"></input>
 </body>
+<script>
+  let update = () => {document.getElementById("l1").innerText = localStorage.getItem("name");}
+</script>
 </html>
