--- a/budget.html
+++ b/budget.html
@@ -8,7 +8,7 @@
   </script>
   
 <h1>Budget Page</h1>
-<form action = "confirm.html">
+<form action = "report.html">
   <label for="totalIncome">Income:</label>
   <input type="text" id="totalIncome" name="totalIncome"><br><br>
   <label for="ratio">Save % of Income:</label>
