--- a/budget.html
+++ b/budget.html
@@ -9,7 +9,7 @@
   
 <h1>Budget Page</h1>
 <form action = "report.html">
-  <label for="totalIncome">Income:</label>
+  <p> Total Income: </p>
   <input type="text" id="totalIncome" name="totalIncome"><br><br>
   <label for="ratio">Save % of Income:</label>
   <input type="ratio" id="ratio" name="ratio"><br><br>
