--- a/budget.html
+++ b/budget.html
@@ -9,14 +9,12 @@
   
 <h1>Budget Page</h1>
 <form action = "report.html">
-  <p> Total Income: </p>
-  <input type="text" id="totalIncome" name="totalIncome"><br><br>
-  <label for="ratio">Save % of Income:</label>
-  <input type="ratio" id="ratio" name="ratio"><br><br>
-
-  <p> Total Buget:  </p>
-  <input type="submit" onclick="function1()" value="Update">
-  <input type="button" onclick="calculateBudget()" value="Test">
+  <label for= oneTimeIncome"> Income Earned Each Time:</label>
+  <input type= "text" id="oneTimeIncome" name="oneTimeIncome"><br><br>
+  <label for= "numberOfInterestPeriods"> Number of Income Periods:</label>
+  <input type= "text" id="numberOfInterestPeriods" name="numberOfInterestPeriods"><br><br>
+  <input type="reset"> value="Clear">
+  <input type="submit" value="Submit">
 </form> 
   
   
