--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>Login Page</h1>
 
-<form action="budget.html">
+<form action="income.html">
   <label for="loginName">Username:</label>
   <input type="text" id="loginName" name="loginName"><br><br>
   <label for="password">Password:</label>
