--- a/income.html
+++ b/income.html
@@ -1,1 +1,17 @@
-hi
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Income Setting</h1>
+
+<form action="budget.html">
+  <label for="addIncome"> One Time Income:</label>
+  <input type="text" id="addIncome" name="addIncome"><br><br>
+  <label for="incomePeriod"> Yearly/Monthly/Weekly:</label>
+  <input type="text" id="incomePeriod" name= "incomePeriod"><br><br>
+  <input type="submit" value="Submit">
+  <input type="reset" value="Reset">
+</form>
+
+</body>
+</html>
