--- a/budget.html
+++ b/budget.html
@@ -13,7 +13,7 @@
   <input type= "text" id="oneTimeIncome" name="oneTimeIncome"><br><br>
   <label for= "numberOfInterestPeriods"> Number of Income Periods:</label>
   <input type= "text" id="numberOfInterestPeriods" name="numberOfInterestPeriods"><br><br>
-  <input type="reset"> value="Clear">
+  <input type="reset" value="Clear">
   <input type="submit" value="Submit">
 </form> 
   
